# 1.16.1

Enhancements:

- #7503 Make package filenames consistent with previous versions
- #7505 Remove static link of libportal from Debian Trixie CI
- #7506 Make `APPLE_CODESIGN_ID` env var optional for CE CI
- #7507 Add `run-retry` action to workaround `integtest` `gcovr` issue
- #7509 Use GitHub vars to determine custom runner names

# 1.16.0

Enhancements:

- #7449 Wayland support (port Red Hat `libei` and `libportal` impl)
- #7448 Only add PR comments for internal PR
- #7445 Update `config.yaml` to support Linux Mint build target
- #7453 Change default value for dev thanks message
- #7455 Use EI screen when `XDG_SESSION_TYPE` is "wayland"
- #7461 More robust `choco` install and helpful `install_deps.py` messages
- #7464 Restore `--only-python` arg to only install Python deps
- #7465 Also cut `+` char for `SHORT_VERSION` var used on upload
- #7467 Load server or client args from `synergy-config.toml`
- #7469 Option to link against local `libportal` and other subprojects
- #7471 Use `vcpkg` to manage `openssl` dep instead of `choco`
- #7473 Simplify `vcpkg` caching and use system `vcpkg`
- #7474 FreeBSD GitHub runner with `vmactions/freebsd-vm@v1`
- #7479 Add `BUILD.md` to get people started
- #7485 Use `.venv` dir for as Python venv and cache
- #7488 Only wait for elevated process to end when arg is set
- #7489 Add `--config-toml` arg for TOML config file
- #7492 Add warnings for `libei` and `libportal`
- #7495 Use 16-CPU CI runner for FreeBSD
- #7496 Cache vcpkg local app dir to restore built OpenSSL
- #7498 Option to static link `libportal` ahead of 0.8.x distribution

# 1.15.1

Enhancements:

- #7452 Change default value for dev thanks message

# 1.15.0

Enhancements:

- #7254 Bind client to a network interface with `--address`
- #7262 Backward compatibility for M1 and M2 builds
- #7263 Change name of Flatpak uploaded to snapshots
- #7265 Remove obtrusive Linux key press log messages
- #7269 Change file drag drop ERROR to DEBUG message