@@ -1,31 +1,0 @@
-name: "Retry command"
-description: "Retries a specified command up to a specified number of times."
-inputs:
-  run:
-    description: "The command to run"
-    required: true
-  retries:
-    description: "Number of retries"
-    required: false
-    default: 3
-runs:
-  using: "composite"
-  steps:
-    - name: Run Command with Retry
-      shell: bash
-      run: |
-        command="${{ inputs.run }}"
-        retries=${{ inputs.retries }}
-        delay=${{ inputs.delay }}
-        attempt=1
-
-        until $command; do
-          if [ $attempt -ge $retries ]; then
-            echo "Attempt $attempt failed! No more retries left."
-            exit 1
-          fi
-          echo "Attempt $attempt failed! Retrying in $delay seconds..."
-          attempt=$((attempt + 1))
-        done
-
-        echo "Command succeeded on attempt $attempt."
